test/tests/stages/18_structures/invalid_types/extra_credit/incomplete_unions/define_incomplete_union.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u
        Bool: 1
        List[0]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: my_union
        None: 
        Structure: 
          TIdentifier: u
          Bool: 1
        None: 
